# snake-hallucinated-worlds

./: .gitignore  PAPER_QUALITY_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
configs/: focused_v2.json
implementation/: .gitignore  README.md  pyproject.toml
implementation/scripts/: generate_data.py  inference_webui.py  train_cnn_agent.py  train_wm.py
implementation/src/snake_wm_v2/: common.py  evaluate_event_policy.py  event_model.py  generate_dataset.py  serve_event_world_model.py  train_event_policy.py
paper/: README.md  main.bbl  main.blg  main.tex  references.bib  wandb_project.txt  wandb_report_url.txt
paper/tables/: grounding_summary.tex  matched_length_objective_summary.tex  matched_objective_comparison.tex  matched_reward_objective_summary.tex  reward_objective_ablation.tex
papers/: README.md  main.tex
papers/tables/: main_eval_summary.tex  pacman_argmax_summary.tex  scalar_consistency_summary.tex  snake_argmax_randomized_summary.tex  snake_hard_vs_prob_summary.tex
results/focused_v2/: eval_summary.csv
runs/vast_39541409_reward_ablation/: reward_objective_ablation.csv  scalar_consistency_summary.json  summary.json
runs/vast_39551039_matched_objective/: objective_eval_summary.csv  summary.json
scripts/: local_smoke.sh  run_pacman_argmax_matrix.sh  vast_bootstrap_and_run.sh
src/snake_wm_v2/: collect_policy_dataset.py  common.py  dataset.py  env.py  evaluate.py  evaluate_pacman_policy.py  export_argmax_paper_assets.py  export_pacman_assets.py  export_paper_assets.py  (+22 more)
src/snake_wm_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+222 files in other folders)
